[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/Menu-1.tres" type="DynamicFont" id=1]
[ext_resource path="res://Sprite/after_button.png" type="Texture" id=2]
[ext_resource path="res://Sprite/face1.png" type="Texture" id=3]
[ext_resource path="res://DefaultLevel/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprite/face2.png" type="Texture" id=5]
[ext_resource path="res://Sprite/face3.png" type="Texture" id=6]
[ext_resource path="res://Sprite/face4.png" type="Texture" id=7]
[ext_resource path="res://Sprite/face5.png" type="Texture" id=8]
[ext_resource path="res://Sprite/before_button.png" type="Texture" id=9]
[ext_resource path="res://Levels/menuedition.gd" type="Script" id=10]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -458764, 10, 0, -458763, 10, 0, -458762, 10, 0, -458761, 10, 0, -458760, 10, 0, -458759, 10, 0, -458758, 10, 0, -458757, 10, 0, -458756, 10, 0, -458755, 10, 0, -458754, 10, 0, -458753, 10, 0, -524288, 10, 0, -524287, 10, 0, -524286, 10, 0, -524285, 10, 0, -524284, 10, 0, -524283, 10, 0, -524282, 10, 0, -524281, 10, 0, -524280, 10, 0, -524279, 10, 0, -524278, 10, 0, -524277, 10, 0, -393228, 10, 0, -393227, 1073741829, 0, -393226, 1073741829, 0, -393225, 1073741829, 0, -393224, 1073741829, 0, -393223, 1073741829, 0, -393222, 1073741829, 0, -393221, 1073741829, 0, -393220, 1073741829, 0, -393219, 1073741829, 0, -393218, 1073741829, 0, -393217, 1073741829, 0, -458752, 1073741829, 0, -458751, 1073741829, 0, -458750, 1073741829, 0, -458749, 1073741829, 0, -458748, 1073741829, 0, -458747, 1073741829, 0, -458746, 1073741829, 0, -458745, 1073741829, 0, -458744, 1073741829, 0, -458743, 1073741829, 0, -458742, 1073741829, 0, -458741, 10, 0, -327692, 10, 0, -327691, 1073741829, 0, -327690, 1073741829, 0, -327689, 1073741829, 0, -327688, 1073741829, 0, -327687, 1073741829, 0, -327686, 1073741829, 0, -327685, 1073741829, 0, -327684, 1073741829, 0, -327683, 1073741829, 0, -327682, 1073741829, 0, -327681, 1073741829, 0, -393216, 1073741829, 0, -393215, 1073741829, 0, -393214, 1073741829, 0, -393213, 1073741829, 0, -393212, 1073741829, 0, -393211, 1073741829, 0, -393210, 1073741829, 0, -393209, 1073741829, 0, -393208, 1073741829, 0, -393207, 1073741829, 0, -393206, 1073741829, 0, -393205, 10, 0, -262156, 10, 0, -262155, 1073741829, 0, -262154, 1073741829, 0, -262153, 1073741829, 0, -262152, 1073741829, 0, -262151, 1073741829, 0, -262150, 1073741829, 0, -262149, 1073741829, 0, -262148, 1073741829, 0, -262147, 1073741829, 0, -262146, 1073741829, 0, -262145, 1073741829, 0, -327680, 1073741829, 0, -327679, 1073741829, 0, -327678, 1073741829, 0, -327677, 1073741829, 0, -327676, 1073741829, 0, -327675, 1073741829, 0, -327674, 1073741829, 0, -327673, 1073741829, 0, -327672, 1073741829, 0, -327671, 1073741829, 0, -327670, 1073741829, 0, -327669, 10, 0, -196620, 10, 0, -196619, 1073741829, 0, -196618, 1073741829, 0, -196617, 1073741829, 0, -196616, 1073741829, 0, -196615, 1073741829, 0, -196614, 1073741829, 0, -196613, 1073741829, 0, -196612, 1073741829, 0, -196611, 1073741829, 0, -196610, 1073741829, 0, -196609, 1073741829, 0, -262144, 1073741829, 0, -262143, 1073741829, 0, -262142, 1073741829, 0, -262141, 1073741829, 0, -262140, 1073741829, 0, -262139, 1073741829, 0, -262138, 1073741829, 0, -262137, 1073741829, 0, -262136, 1073741829, 0, -262135, 1073741829, 0, -262134, 1073741829, 0, -262133, 10, 0, -131084, 10, 0, -131083, 1073741829, 0, -131082, 1073741829, 0, -131081, 1073741829, 0, -131080, 1073741829, 0, -131079, 1073741829, 0, -131078, 1073741829, 0, -131077, 1073741829, 0, -131076, 1073741829, 0, -131075, 1073741829, 0, -131074, 1073741829, 0, -131073, 1073741829, 0, -196608, 1073741829, 0, -196607, 1073741829, 0, -196606, 1073741829, 0, -196605, 1073741829, 0, -196604, 1073741829, 0, -196603, 1073741829, 0, -196602, 1073741829, 0, -196601, 1073741829, 0, -196600, 1073741829, 0, -196599, 1073741829, 0, -196598, 1073741829, 0, -196597, 10, 0, -65548, 10, 0, -65547, 1073741829, 0, -65546, 1073741829, 0, -65545, 1073741829, 0, -65544, 1073741829, 0, -65543, 1073741829, 0, -65542, 1073741829, 0, -65541, 1073741829, 0, -65540, 1073741829, 0, -65539, 1073741829, 0, -65538, 1073741829, 0, -65537, 1073741829, 0, -131072, 1073741829, 0, -131071, 1073741829, 0, -131070, 1073741829, 0, -131069, 1073741829, 0, -131068, 1073741829, 0, -131067, 1073741829, 0, -131066, 1073741829, 0, -131065, 1073741829, 0, -131064, 1073741829, 0, -131063, 1073741829, 0, -131062, 1073741829, 0, -131061, 10, 0, -12, 10, 0, -11, 1073741829, 0, -10, 1073741829, 0, -9, 1073741829, 0, -8, 1073741829, 0, -7, 1073741829, 0, -6, 1073741829, 0, -5, 1073741829, 0, -4, 1073741829, 0, -3, 1073741829, 0, -2, 1073741829, 0, -1, 1073741829, 0, -65536, 1073741829, 0, -65535, 1073741829, 0, -65534, 1073741829, 0, -65533, 1073741829, 0, -65532, 1073741829, 0, -65531, 1073741829, 0, -65530, 1073741829, 0, -65529, 1073741829, 0, -65528, 1073741829, 0, -65527, 1073741829, 0, -65526, 1073741829, 0, -65525, 10, 0, 65524, 10, 0, 65525, 1073741829, 0, 65526, 1073741829, 0, 65527, 1073741829, 0, 65528, 1073741829, 0, 65529, 1073741829, 0, 65530, 1073741829, 0, 65531, 1073741829, 0, 65532, 1073741829, 0, 65533, 1073741829, 0, 65534, 1073741829, 0, 65535, 1073741829, 0, 0, 1073741829, 0, 1, 1073741829, 0, 2, 1073741829, 0, 3, 1073741829, 0, 4, 1073741829, 0, 5, 1073741829, 0, 6, 1073741829, 0, 7, 1073741829, 0, 8, 1073741829, 0, 9, 1073741829, 0, 10, 1073741829, 0, 11, 10, 0, 131060, 10, 0, 131061, 1073741829, 0, 131062, 1073741829, 0, 131063, 1073741829, 0, 131064, 1073741829, 0, 131065, 1073741829, 0, 131066, 1073741829, 0, 131067, 1073741829, 0, 131068, 1073741829, 0, 131069, 1073741829, 0, 131070, 1073741829, 0, 131071, 1073741829, 0, 65536, 1073741829, 0, 65537, 1073741829, 0, 65538, 1073741829, 0, 65539, 1073741829, 0, 65540, 1073741829, 0, 65541, 1073741829, 0, 65542, 1073741829, 0, 65543, 1073741829, 0, 65544, 1073741829, 0, 65545, 1073741829, 0, 65546, 1073741829, 0, 65547, 10, 0, 196596, 10, 0, 196597, 1073741829, 0, 196598, 1073741829, 0, 196599, 1073741829, 0, 196600, 1073741829, 0, 196601, 1073741829, 0, 196602, 1073741829, 0, 196603, 1073741829, 0, 196604, 1073741829, 0, 196605, 1073741829, 0, 196606, 1073741829, 0, 196607, 1073741829, 0, 131072, 1073741829, 0, 131073, 1073741829, 0, 131074, 1073741829, 0, 131075, 1073741829, 0, 131076, 1073741829, 0, 131077, 1073741829, 0, 131078, 1073741829, 0, 131079, 1073741829, 0, 131080, 1073741829, 0, 131081, 1073741829, 0, 131082, 1073741829, 0, 131083, 10, 0, 262132, 10, 0, 262133, 1073741829, 0, 262134, 1073741829, 0, 262135, 1073741829, 0, 262136, 1073741829, 0, 262137, 1073741829, 0, 262138, 1073741829, 0, 262139, 1073741829, 0, 262140, 1073741829, 0, 262141, 1073741829, 0, 262142, 1073741829, 0, 262143, 1073741829, 0, 196608, 1073741829, 0, 196609, 1073741829, 0, 196610, 1073741829, 0, 196611, 1073741829, 0, 196612, 1073741829, 0, 196613, 1073741829, 0, 196614, 1073741829, 0, 196615, 1073741829, 0, 196616, 1073741829, 0, 196617, 1073741829, 0, 196618, 1073741829, 0, 196619, 10, 0, 327668, 10, 0, 327669, 1073741829, 0, 327670, 1073741829, 0, 327671, 1073741829, 0, 327672, 1073741829, 0, 327673, 1073741829, 0, 327674, 1073741829, 0, 327675, 1073741829, 0, 327676, 1073741829, 0, 327677, 1073741829, 0, 327678, 1073741829, 0, 327679, 1073741829, 0, 262144, 1073741829, 0, 262145, 1073741829, 0, 262146, 1073741829, 0, 262147, 1073741829, 0, 262148, 1073741829, 0, 262149, 1073741829, 0, 262150, 1073741829, 0, 262151, 1073741829, 0, 262152, 1073741829, 0, 262153, 1073741829, 0, 262154, 1073741829, 0, 262155, 10, 0, 393204, 1073741834, 0, 393205, 1073741829, 0, 393206, 1073741829, 0, 393207, 1073741829, 0, 393208, 1073741829, 0, 393209, 1073741829, 0, 393210, 1073741829, 0, 393211, 1073741829, 0, 393212, 1073741829, 0, 393213, 1073741829, 0, 393214, 1073741829, 0, 393215, 1073741829, 0, 327680, 1073741829, 0, 327681, 1073741829, 0, 327682, 1073741829, 0, 327683, 1073741829, 0, 327684, 1073741829, 0, 327685, 1073741829, 0, 327686, 1073741829, 0, 327687, 1073741829, 0, 327688, 1073741829, 0, 327689, 1073741829, 0, 327690, 1073741829, 0, 327691, 10, 0, 458740, 10, 0, 458741, 1073741829, 0, 458742, 1073741829, 0, 458743, 1073741829, 0, 458744, 1073741829, 0, 458745, 1073741829, 0, 458746, 1073741829, 0, 458747, 1073741829, 0, 458748, 1073741829, 0, 458749, 1073741829, 0, 458750, 1073741829, 0, 458751, 1073741829, 0, 393216, 1073741829, 0, 393217, 1073741829, 0, 393218, 1073741829, 0, 393219, 1073741829, 0, 393220, 1073741829, 0, 393221, 1073741829, 0, 393222, 1073741829, 0, 393223, 1073741829, 0, 393224, 1073741829, 0, 393225, 1073741829, 0, 393226, 1073741829, 0, 393227, 10, 0, 524276, 1073741834, 0, 524277, 1073741834, 0, 524278, 1073741834, 0, 524279, 1073741834, 0, 524280, 1073741834, 0, 524281, 1073741834, 0, 524282, 1073741834, 0, 524283, 1073741834, 0, 524284, 1073741834, 0, 524285, 1073741834, 0, 524286, 1073741834, 0, 524287, 1073741834, 0, 458752, 1073741834, 0, 458753, 1073741834, 0, 458754, 1073741834, 0, 458755, 1073741834, 0, 458756, 1073741834, 0, 458757, 1073741834, 0, 458758, 1073741834, 0, 458759, 1073741834, 0, 458760, 1073741834, 0, 458761, 1073741834, 0, 458762, 1073741834, 0, 458763, 1073741834, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Play" type="TextureButton" parent="."]
margin_left = -126.0
margin_right = 130.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="TextureButton" parent="."]
margin_left = -126.318
margin_top = 126.727
margin_right = 129.682
margin_bottom = 190.727
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = -15.1362
margin_top = -22.7042
margin_right = 24.8638
margin_bottom = 17.2958
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 5.27112
margin_top = -188.681
margin_right = 292.271
margin_bottom = 3.31879
theme = SubResource( 1 )
bbcode_text = "IT"
text = "IT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -392.0
margin_top = -192.0
margin_right = 41.0
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " ex"
text = " ex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face1" type="Sprite" parent="."]
position = Vector2( -304.673, 119.033 )
scale = Vector2( 2.75396, 2.75396 )
texture = ExtResource( 3 )

[node name="face2" type="Sprite" parent="."]
position = Vector2( -215.415, 116.361 )
scale = Vector2( 2.97668, 2.97668 )
texture = ExtResource( 5 )

[node name="face3" type="Sprite" parent="."]
position = Vector2( 193.939, 47.088 )
scale = Vector2( 1.96875, 1.96875 )
texture = ExtResource( 6 )

[node name="face4" type="Sprite" parent="."]
position = Vector2( 288.307, 49.088 )
scale = Vector2( 2.15625, 2.15625 )
texture = ExtResource( 7 )

[node name="face5" type="Sprite" parent="."]
position = Vector2( 243.059, 137 )
scale = Vector2( 2.15625, 2.15625 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]
script = ExtResource( 10 )

[connection signal="tween_all_completed" from="Tween" to="Tween" method="_animation_done"]
